Documentação da API

--- a/conteudo/capitulo3.tex
+++ b/conteudo/capitulo3.tex
@@ -2,7 +2,7 @@
 
 Nesse capítulo é descrita a situação atual do sistema, sua modelagem e arquitetura.
 
-
+Atualmente existe um aplicativo \textit{Desktop} do Portal de Algoritmos que serve de interface gráfica para os alunos da \ac{UCS}, esse aplicativo foi desenvolvido para suprir a necessidade de uma atualização rápida para os alunos, pois \textit{Java Applets} não está sendo suportado pelos navegadores atuais. Ele faz a comunicação com o \textit{software} antigo via \textit{Web Service}.
 
 \section{Diagrama de Classe de Domínio}
 
