--- a/conteudo/capitulo6.tex
+++ b/conteudo/capitulo6.tex
@@ -1,15 +1,8 @@
 \chapter{Considerações Finais}\label{cpConsideracoesParciais}
 
-Problema e solução
+O objetivo do trabalho era realizar a implementação de um \textit{software} novo visando a evolução do antigo. Esse objetivo foi entregue com alta qualidade e organização de código. Durante o o trabalho foram encontrado diversos problemas no \textit{software} antigo, esses problemas foram sendo resolvido de diversas formas, como as citadas abaixo.
 
-% usabilidade
-% tecnologia defassada
-
-% objetivos x o que foi feito
-% analise
-% proposta
-% desenvolvimento
-
+O portal antigo utilizava tecnologias antigas, como \textit{Java Applet}, \ac{HTML} sem estruturação e sem validações, esse problema foi resolvido utilizando \textit{AngularJS 4}, um \textit{framework javascript} para implementar o consumo de \ac{API} \ac{REST}, além do consumo de dados é preciso exibir esses dados, então foi utilizado um \textit{framework} de \ac{CSS}, esse conhecido como Bootstrap, com ele foi possível criar interface responsivas, bonitas e intuitivas para o uso do \textit{software}.
 
 O novo \textit{software} foi desenvolvido utilizando tecnologias de ponta, como \textit{Java} na última versão estável, \textit{AngulaJS} na versão mais recente estável e um \textit{framework} de \ac{CSS} fácil de utilizar.
 
@@ -20,3 +13,5 @@ A interface gráfica ficou mais amigável e intuitiva para o usuário, utilizando p
 Com um banco de dados atual o \textit{software} está mais confiável no armazenamento das informações cadastrais, com essa atualização estamos garantindo integridade e segurança nas informações armazenadas nele.
 
 Com a implementação do novo gerenciador do portal de algoritmos concluimos que foi construido um \textit{software} robusto, organizado, com alta qualidade de código e de fácil entendimento sobre o que ele foi proposto.
+
+Chegamos no final desse trabalho com um \textit{software} bem escrito, estruturado e organizado com documentação de todas as chamadas das \ac{API}\textit{s}.
