--- a/tcc.tex
+++ b/tcc.tex
@@ -136,7 +136,7 @@ Banca examinadora:\par
 \sffamily\itshape
 "A vida não é fácil e ninguém disse que seria."
 
-\textsc{Autor Desconhecido}
+\textsc{Henrique Bastos}
 \end{dedicatoria}
 
 \begin{agradecimentos}
@@ -192,11 +192,7 @@ A todos vocês, minha sincera gratidão.
 
 \begin{abstract}
 
-O portal de algoritmos da Universidade de Caxias do Sul encontra-se tecnologicamente defasado, com falhas de segurança e pouca usabilidade.
-
-Utilizando-se de metodologias da engenharia de \textit{software} será realizada a evolução do portal de algoritmos. Levando em consideração a necessidade de facilitar adaptações e manutenções futuras que ocorrem no ciclo de vida de um \textit{software}.
-
-O desenvolvimento da solução contará com a unificação das tecnologias, seguindo os padrões de arquitetura de \textit{software}. Além do portal de algoritmos contar com todas as funcionalidades antigas, serão implementadas diversas novas funcionalidades, que se mostraram necessárias durante o levantamento de requisitos, tanto funcionais como os não-funcionais. Tendo os casos de usos detalhados para certificar o cumprimento dos objetivos.
+Esse trabalho fornece todo o processo de evolução do portal de algoritmos, o trabalho tem por objetivo realizar a evolução do \textit{software} atual para uma versão mais moderna tecnologicamente e estruturalmente, para esse objetivo foram escolhidos tencologias atuais, como \textit{AngularJS}, \textit{Java 8}, \textit{Bootstrap 3}, \textit{Postgreslq 10}. Para atingirmos o objetivo utilizamos engenharia reversa, diagramas de casos de uso, diagrama de robustez, \textit{mockups} de interfaces gráficas e escolhemos a arquitetura \ac{MVC} para guiar no desenvolvimento. 
 
 \keyword{Portal de Algoritmos}
 \keyword{Algoritmos}
